fix: compact sidebar alignment for multi toolbar

--- a/modules/sidebar.css
+++ b/modules/sidebar.css
@@ -181,25 +181,25 @@
 
 
 /* reduced height of floating sidebar for multiple/collapse toolbar */
-@media not (-moz-pref("zen.view.use-single-toolbar")) {
-  :root[zen-compact-mode="true"] #navigator-toolbox {
-    height: calc(100% - 48px) !important;
+
+:root:not([zen-single-toolbar="true"])[zen-compact-mode="true"] #navigator-toolbox {
+  height: calc(100% - 64px) !important;
+  align-self: center !important;
+  top: 0 !important;
+}
+
+
+
+@media not (-moz-bool-pref: "wireframe.urlbar.position.top"){
+  :root:not([zen-single-toolbar="true"])[zen-compact-mode="true"] #navigator-toolbox {
+    height: calc(100% - 64px) !important;
     align-self: center !important;
-    margin-top: 20px !important;
+    margin-top: 0px !important;
     top: 0 !important;
+    bottom: 48px !important;
   }
 }
 
-@media not (-moz-pref("zen.view.use-single-toolbar")) {
-  @media not (-moz-bool-pref: "wireframe.urlbar.position.top"){
-    :root[zen-compact-mode="true"] #navigator-toolbox {
-      height: calc(100% - 48px) !important;
-      align-self: center !important;
-      margin-top: 0px !important;
-      top: 0 !important;
-    }
-  }
-}
 
 @media (-moz-pref("zen.view.use-single-toolbar")) {
   :root[zen-compact-mode="true"] #navigator-toolbox {
@@ -229,7 +229,7 @@
   :root:not([zen-right-side])[zen-sidebar-expanded="true"][zen-compact-mode="true"] #titlebar {
     margin-left: 16px !important;
     margin-bottom: 6px !important;
-    margin-top: 32px !important;
+    margin-top: 0 !important;
   }
 
   /* expanded docked sidebar RIGHT side mode */
